<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.jingbin.webviewstudy.MainActivity">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="内核选择：" />

            <RadioButton
                android:id="@+id/rb_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="系统WebView" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="腾讯x5" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <AutoCompleteTextView
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_hit"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_openUrl"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/bt_open_url" />

        <TextView
            android:id="@+id/bt_baidu"
            style="@style/textStyle"
            android:text="@string/text_baidu" />

        <View
            style="@style/lineStyle"
            android:layout_width="match_parent"
            android:layout_height="1px" />

        <TextView
            android:id="@+id/bt_movie"
            style="@style/textStyle"
            android:text="@string/text_movie" />

        <View
            style="@style/lineStyle"
            android:layout_width="match_parent"
            android:layout_height="1px" />

        <TextView
            android:id="@+id/bt_upload_photo"
            style="@style/textStyle"
            android:text="@string/text_upload_photo" />

        <View
            style="@style/lineStyle"
            android:layout_width="match_parent"
            android:layout_height="1px" />

        <TextView
            android:id="@+id/bt_call"
            style="@style/textStyle"
            android:text="@string/text_js" />

        <View
            style="@style/lineStyle"
            android:layout_width="match_parent"
            android:layout_height="1px" />

        <TextView
            android:id="@+id/bt_java_js"
            style="@style/textStyle"
            android:text="@string/js_android"
            android:textAllCaps="false" />

        <View
            style="@style/lineStyle"
            android:layout_width="match_parent"
            android:layout_height="1px" />

        <TextView
            android:id="@+id/bt_deeplink"
            style="@style/textStyle"
            android:text="@string/deeplink" />

        <View
            style="@style/lineStyle"
            android:layout_width="match_parent"
            android:layout_height="1px" />

        <TextView
            android:id="@+id/bt_toolbar"
            style="@style/textStyle"
            android:text="@string/string_toolbar" />

        <View
            style="@style/lineStyle"
            android:layout_width="match_parent"
            android:layout_height="1px" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingRight="5dp"
            android:paddingBottom="3dp"
            android:textSize="11sp"
            tools:ignore="SmallSp"
            tools:text="❤版本：v2.0" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
